Bug 372809 - Moving or resizing windows with Alt key does not work when Caps Lock is enabled
Summary: Moving or resizing windows with Alt key does not work when Caps Lock is enabled
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D3467
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-22 20:41 UTC by Kai Uwe Broulik
Modified: 2016-11-25 06:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2016-11-22 20:41:17 UTC
When Caps Lock is enabled, I cannot move or resize windows with Alt + Left click or right click.

1.) Press Caps Lock so it is on
2.) Try to move a window by pressing and holding Alt while dragging the mouse

Moreover, it tends to get confused about keyboard state when I do this. I now type in lower caps although caps lock light is on but I cannot move windows around. Now I press Caps Lock again, light is off, I type in all caps and I can move windows. (affects both X and wayland clients)
Comment 1 Martin Flöser 2016-11-23 07:54:03 UTC
unit test confirms the situation
Comment 2 Martin Flöser 2016-11-23 08:07:44 UTC
Patch at: https://phabricator.kde.org/D3467
Comment 3 Martin Flöser 2016-11-25 06:39:05 UTC
Git commit 0b47b84816acff5a2a493db3aab5aff52c6cc5dd by Martin Gräßlin.
Committed on 25/11/2016 at 06:37.
Pushed by graesslin into branch 'master'.

Ignore non-relevant modifiers when evaluating mouse actions

Summary:
E.g. CapsLock should not prevent Alt+left click move.

Reviewers: #kwin, #plasma_on_wayland, broulik

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D3467

M  +51   -16   autotests/integration/pointer_input.cpp
M  +2    -2    input.cpp

https://commits.kde.org/kwin/0b47b84816acff5a2a493db3aab5aff52c6cc5dd